InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BatchJobId__c</fullName>
    <formula>vlocity_ins__ContractId__r.vlocity_ins__LastDocumentBatchJobId__c</formula>
    <label>Batch Job Id</label>
    <type>Text</type>
</CustomField>