InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__BatchJobStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BatchJobStatus__c</fullName>
    <formula>vlocity_ins__ContractId__r.vlocity_ins__LastDocumentBatchJobStatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Job Status</label>
    <type>Text</type>
</CustomField>