InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__ContractId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContractId__c</fullName>
    <description>Contract document version</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Contract_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>