InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__ContractType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContractType__c</fullName>
    <description>Contract type</description>
    <formula>vlocity_ins__ContractId__r.vlocity_ins__ContractType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>