InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__CountOfContainsRedlines__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CountOfContainsRedlines__c</fullName>
    <description>Total count of sections that contain redlines in the document version</description>
    <label>Count Of Contains Redlines</label>
    <summaryFilterItems>
        <field>vlocity_ins__ContractSection__c.vlocity_ins__ContainsRedlines__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>vlocity_ins__ContractSection__c.vlocity_ins__ContractVersionId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>