InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__CountOfDocuSignDocument__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CountOfDocuSignDocument__c</fullName>
    <description>Count of documents</description>
    <label>Number of DocuSign Document</label>
    <summaryForeignKey>vlocity_ins__ContractEnvelope__c.vlocity_ins__ContractVersionId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>