InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__CountOfNonStandardSection__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CountOfNonStandardSection__c</fullName>
    <description>Count of non standard sections</description>
    <label>Non Standard Count</label>
    <summaryFilterItems>
        <field>vlocity_ins__ContractSection__c.vlocity_ins__IsSectionNonStandard__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>vlocity_ins__ContractSection__c.vlocity_ins__ContractVersionId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>