InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__CountOfPendingDocument__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CountOfPendingDocument__c</fullName>
    <description>Count of pending documents</description>
    <label>Number of Pending Document</label>
    <summaryFilterItems>
        <field>vlocity_ins__ContractEnvelope__c.vlocity_ins__Status__c</field>
        <operation>equals</operation>
        <value>sent, delivered</value>
    </summaryFilterItems>
    <summaryForeignKey>vlocity_ins__ContractEnvelope__c.vlocity_ins__ContractVersionId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>