InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__CreatorName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CreatorName__c</fullName>
    <description>Creator name</description>
    <formula>CreatedBy.FirstName &amp; &apos; &apos;&amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>