InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__DataExtractDRBundleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DataExtractDRBundleName__c</fullName>
    <formula>vlocity_ins__DocumentTemplateId__r.vlocity_ins__DataExtractDRBundleName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Data Extract Bundle Name</label>
    <type>Text</type>
</CustomField>