InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__DocumentLockedUserName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DocumentLockedUserName__c</fullName>
    <description>User name of user who locked this version</description>
    <formula>vlocity_ins__DocumentLockedUserId__r.FirstName &amp; &quot; &quot; &amp; vlocity_ins__DocumentLockedUserId__r.LastName</formula>
    <label>Locked By</label>
    <type>Text</type>
</CustomField>