InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__DocumentTemplateFormatType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DocumentTemplateFormatType__c</fullName>
    <formula>TEXT(vlocity_ins__DocumentTemplateId__r.vlocity_ins__TemplateContentFormat__c)</formula>
    <label>Document Template Format Type</label>
    <type>Text</type>
</CustomField>