InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__DocumentTemplateVersion__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DocumentTemplateVersion__c</fullName>
    <description>Document Template Version</description>
    <formula>vlocity_ins__DocumentTemplateId__r.vlocity_ins__VersionNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Template Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>