InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__DocxTemplateName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DocxTemplateName__c</fullName>
    <label>Docx Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>