InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__MappingType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MappingType__c</fullName>
    <formula>TEXT(vlocity_ins__DocumentTemplateId__r.vlocity_ins__MappingType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Mapping Type</label>
    <type>Text</type>
</CustomField>