InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__TokenDRBundleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TokenDRBundleName__c</fullName>
    <formula>vlocity_ins__DocumentTemplateId__r.vlocity_ins__TokenDRBundleName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Token DR Bundle Name</label>
    <type>Text</type>
</CustomField>