InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__TrackContractRedlines__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TrackContractRedlines__c</fullName>
    <description>Document version status - active or inactive</description>
    <formula>vlocity_ins__DocumentTemplateId__r.vlocity_ins__TrackContractRedlines__c</formula>
    <label>Track Contract Redlines</label>
    <type>Checkbox</type>
</CustomField>