InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractVersion__c/fields/vlocity_ins__WMLMetadata__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__WMLMetadata__c</fullName>
    <label>WML Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>